make index a jsp page; a few other tweaks

--- a/tomcat/webapps/Trawl/WEB-INF/web.xml
+++ b/tomcat/webapps/Trawl/WEB-INF/web.xml
@@ -11,6 +11,6 @@
 
     <servlet-mapping>
         <servlet-name>Trawl</servlet-name>
-        <url-pattern>/callServlet.do</url-pattern>
+        <url-pattern>/doBioLookup.do</url-pattern>
     </servlet-mapping>
 </web-app>
