--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@
 .idea/
 *.class
 logs/
-tomcat/work/Catalina/localhost/Trawl/org/apache/jsp/index_jsp.java
-tomcat/work/Catalina/localhost/Trawl/org/apache/jsp/index_jsp.java
+tomcat/work/Catalina/localhost/Trawl/org/apache
+
