--- a/tomcat/webapps/Trawl/WEB-INF/web.xml
+++ b/tomcat/webapps/Trawl/WEB-INF/web.xml
@@ -12,5 +12,6 @@
     <servlet-mapping>
         <servlet-name>Trawl</servlet-name>
         <url-pattern>/doBioLookup.do</url-pattern>
+        <url-pattern>/doHist.do</url-pattern>
     </servlet-mapping>
 </web-app>
