add table results

--- a/tomcat/webapps/Trawl/WEB-INF/web.xml
+++ b/tomcat/webapps/Trawl/WEB-INF/web.xml
@@ -15,5 +15,6 @@
         <url-pattern>/doHist.do</url-pattern>
         <url-pattern>/doMap.do</url-pattern>
         <url-pattern>/doCluster.do</url-pattern>
+        <url-pattern>/doList.do</url-pattern>
     </servlet-mapping>
 </web-app>
